--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     <a href="#map">Life Map</a>
     <a href="#logs">Logs</a>
     <a href="#experiments">Experiments</a>
+    <a href="my-pranic-energy-system.pdf" target="_blank">
+  My Pranic Energy System (PDF)
+</a>
+
     <a href="#library">Library</a>
     <a href="#meta">Meta</a>
   </nav>
