--- a/index.html
+++ b/index.html
@@ -65,67 +65,11 @@
 <header>
   <h1>Life Map Among the Stars</h1>
   <p>
-    This is not a blog. Not a portfolio. Not a destination.
-    <br />
-    It is a living map — tracing curiosity, growth, doubt, and becoming,
-    while navigating life among the stars.
-  </p>
-
-  <nav>
-    <a href="#map">Life Map</a>
-    <a href="#logs">Logs</a>
-    <a href="#experiments">Experiments</a>
-    <a href="#library">Library</a>
-    <a href="#meta">Meta</a>
-  </nav>
-</header>
-
-<section id="map">
-  <h2>🧭 Life Map</h2>
-  <p>
-    The big questions. The values that pull me forward.
-    The direction, even when the destination is unclear.
-    This section evolves slowly.
-  </p>
-</section>
-
-<section id="logs">
-  <h2>📓 Logs</h2>
-  <p>
-    Field notes from living.
-    Thoughts in motion. Observations. Fragments.
-    Order is optional. Honesty is not.
-  </p>
-</section>
-
-<section id="experiments">
-  <h2>🧪 Experiments</h2>
-  <p>
-    Attempts to change something — habits, systems, perspectives.
-    Hypothesis → Action → Result → Reflection.
-    Failure counts as data.
+    It is a living system — life among the stars.
   </p>
   <a href="my-pranic-energy-system.pdf" target="_blank">
   My Pranic Energy System (PDF)
 </a>
-</section>
-
-<section id="library">
-  <h2>📚 Library</h2>
-  <p>
-    Ideas worth revisiting.
-    Books, concepts, mental models, and quotes —
-    filtered through my own understanding.
-  </p>
-</section>
-
-<section id="meta">
-  <h2>🧩 Meta</h2>
-  <p>
-    Reflections about this project itself.
-    How I am changing. Why this still matters.
-    Version history of the mapmaker.
-  </p>
 </section>
 
 <footer>
