--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
   <a href="my-pranic-energy-system.pdf" target="_blank">
   My Pranic Energy System (PDF)
 </a>
+  <video width="640" autoplay loop>
+  <source src="videos/Through_my_Stellar_Gateway_Chakra.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 </section>
 
 <footer>
