--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Life Map Among the Stars</title>
+  <title>Life Among the Stars</title>
   <style>
     body {
       margin: 0;
@@ -63,7 +63,7 @@
 <body>
 
 <header>
-  <h1>Life Map Among the Stars</h1>
+  <h1>Life Among the Stars</h1>
   <p>
     It is a living system — life among the stars.
   </p>
@@ -72,13 +72,13 @@
 </a>
   <video width="640" autoplay loop>
   <source src="videos/Through_my_Stellar_Gateway_Chakra.mp4" type="video/mp4">
-  Your browser does not support the video tag.
+  <a href="videos/Through_my_Stellar_Gateway_Chakra.mp4">Download the video</a>
 </video>
 </section>
 
 <footer>
   <p>
-    Life Map Among the Stars — a long-term exploration.
+    Life Among the Stars — a long-term exploration.
   </p>
 </footer>
 
