--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
   <a href="my-pranic-energy-system.pdf" target="_blank">
   My Pranic Energy System (PDF)
 </a>
+  <a href="the_mathematics_of_lottery.pdf" target="_blank">
+  The Mathematics of Lottery (PDF)
+</a>
 </section>
 
 <footer>
