--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
   <a href="the_mathematics_of_lottery.pdf" target="_blank">
   The Mathematics of Lottery (PDF)
 </a>
+  </p>
+  <a href="laya_yoga.pdf" target="_blank">
+  Laya-Yoga (PDF)
+</a>
 </section>
 
 <footer>
