--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
   <a href="laya_yoga.pdf" target="_blank">
   Laya-Yoga (PDF)
 </a>
+  </p>
+  <a href="lucid_dream_or_astral_projection.pdf" target="_blank">
+  Lucid Dream or Astral Projection (PDF)
+</a>
 </section>
 
 <footer>
