--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
   The Mathematics of Lottery (PDF)
 </a>
   </p>
-  <a href="laya_yoga.pdf" target="_blank">
+  <a href="laya-yoga.pdf" target="_blank">
   Laya-Yoga (PDF)
 </a>
   </p>
-  <a href="lucid_dream_or_astral_projection.pdf" target="_blank">
+  <a href="lucid-dream-or-astral-projection.pdf" target="_blank">
   Lucid Dream or Astral Projection (PDF)
 </a>
 </section>
