--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <p>
     It is a living system — life among the stars.
   </p>
-  <a href="my-pranic-energy-system.pdf" target="_blank">
-  My Pranic Energy System (PDF)
+  <a href="my-holographic-universe.pdf" target="_blank">
+  My Holographic Universe, Answer to Life (PDF)
 </a>
   </p>
   <a href="the_mathematics_of_lottery.pdf" target="_blank">
